[gd_scene load_steps=21 format=1]

[ext_resource path="res://main.gd" type="Script" id=1]
[ext_resource path="res://assets/Chunkfive.otf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/Titillium-Regular.otf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/dice.png" type="Texture" id=4]
[ext_resource path="res://assets/cutout tileset.tres" type="TileSet" id=5]
[ext_resource path="res://assets/about.png" type="Texture" id=6]
[ext_resource path="res://assets/settings.png" type="Texture" id=7]
[ext_resource path="res://assets/list options.png" type="Texture" id=8]
[ext_resource path="res://assets/go back.png" type="Texture" id=9]
[ext_resource path="res://assets/add.png" type="Texture" id=10]
[ext_resource path="res://assets/remove.png" type="Texture" id=11]
[ext_resource path="res://assets/about_godot.png" type="Texture" id=12]

[sub_resource type="DynamicFont" id=1]

font/size = 36
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]

font/size = 24
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=3]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
bg_color = Color( 0.359528, 0.730469, 0.452263, 1 )
light_color = Color( 0.430874, 0.777344, 0.391708, 1 )
dark_color = Color( 0.116135, 0.503906, 0.149459, 1 )
border_size = 0
border_blend = false
draw_bg = true

[sub_resource type="Animation" id=4]

length = 3.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("number result:rect/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 1.5, 3 ),
"transitions": FloatArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 123 ), Vector2( 112, 64 ), Vector2( 186, 2 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("number result:rect/scale")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 1.5, 3 ),
"transitions": FloatArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.65, 0.65 ), Vector2( 0.4, 0.4 ) ]
}

[sub_resource type="Animation" id=5]

length = 8.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("..:frames_to_skip")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 3, 4, 4.5, 4.9, 5.2, 5.5, 5.7, 5.9, 6, 6.1, 6.2, 6.8, 7.8, 8 ),
"transitions": FloatArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 15, 20, 30, 60 ]
}

[sub_resource type="Animation" id=6]

length = 3.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("result:rect/scale")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 1.5, 3 ),
"transitions": FloatArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.3, 1.3 ), Vector2( 1.5, 1.5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("result:rect/pos")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 1.5, 3 ),
"transitions": FloatArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 100, 198 ), Vector2( 41, 144 ), Vector2( -8, 90 ) ]
}

[sub_resource type="StyleBoxFlat" id=7]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
bg_color = Color( 0.219437, 0.460103, 0.769531, 1 )
light_color = Color( 0.8, 0.8, 0.8, 1 )
dark_color = Color( 0.8, 0.8, 0.8, 1 )
border_size = 0
border_blend = true
draw_bg = true

[sub_resource type="StyleBoxFlat" id=8]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
bg_color = Color( 0.957031, 0.201874, 0.201874, 1 )
light_color = Color( 0.8, 0.8, 0.8, 1 )
dark_color = Color( 0.8, 0.8, 0.8, 1 )
border_size = 0
border_blend = true
draw_bg = true

[node name="main" type="Node2D"]

script/script = ExtResource( 1 )

[node name="main frame" type="ColorFrame" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 640.0
margin/bottom = 360.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="number result" type="Label" parent="main frame"]

visibility/visible = false
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 1.0
margin/top = 22.0
margin/right = 388.0
margin/bottom = 108.0
custom_fonts/font = SubResource( 1 )
text = "999"
align = 1
valign = 1
clip_text = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="result" type="Label" parent="main frame"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 130.0
margin/right = 387.0
margin/bottom = 188.0
custom_fonts/font = SubResource( 2 )
text = "? ~ ? ~ ?"
align = 1
valign = 1
clip_text = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="shuffle" type="Button" parent="main frame"]

hint/tooltip = "Generate result. (Hold to change power of roll)"
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 177.0
margin/top = 220.0
margin/right = 213.0
margin/bottom = 252.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
icon = ExtResource( 4 )
flat = false

[node name="power meter" type="ProgressBar" parent="main frame"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 30.0
margin/top = 258.0
margin/right = 365.0
margin/bottom = 274.0
custom_styles/fg = SubResource( 3 )
range/min = 0.0
range/max = 100.0
range/step = 1.0
range/page = 0.0
range/value = 1.0
range/exp_edit = false
range/rounded = false
percent/visible = false

[node name="cutout" type="TileMap" parent="main frame"]

transform/pos = Vector2( -47, 0 )
mode = 0
tile_set = ExtResource( 5 )
cell/size = Vector2( 64, 64 )
cell/quadrant_size = 16
cell/custom_transform = Matrix32( 1, 0, 0, 1, 0, 0 )
cell/half_offset = 2
cell/tile_origin = 0
cell/y_sort = false
collision/use_kinematic = false
collision/friction = 1.0
collision/bounce = 0.0
collision/layers = 1
collision/mask = 1
occluder/light_mask = 1
tile_data = IntArray( 7, 0, 65543, 0, 131079, 0, 196615, 0, 262151, 0, 327687, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="trim notice" type="Label" parent="main frame"]

rect/rotation = -90.0
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 438.0
margin/top = 75.0
margin/right = 651.0
margin/bottom = 89.0
text = "Trim off the controls on this side."
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
__meta__ = {
"_edit_lock_": true
}

[node name="about" type="Button" parent="main frame"]

hint/tooltip = "Generate result. (Hold to change power of roll)"
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 588.0
margin/top = 244.0
margin/right = 624.0
margin/bottom = 276.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
icon = ExtResource( 6 )
flat = false

[node name="settings" type="Button" parent="main frame"]

hint/tooltip = "Generate result. (Hold to change power of roll)"
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 588.0
margin/top = 278.0
margin/right = 624.0
margin/bottom = 310.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
icon = ExtResource( 7 )
flat = false

[node name="list" type="Button" parent="main frame"]

hint/tooltip = "Generate result. (Hold to change power of roll)"
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 588.0
margin/top = 312.0
margin/right = 624.0
margin/bottom = 344.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
icon = ExtResource( 8 )
flat = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="main frame"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
"anims/aside number result" = SubResource( 4 )
"anims/generation cycler" = SubResource( 5 )
"anims/present result" = SubResource( 6 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="debug info" type="Node2D" parent="."]

editor/display_folded = true
visibility/visible = false

[node name="max shuffle number label" type="Label" parent="debug info"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 114.0
margin/bottom = 14.0
custom_colors/font_color = Color( 0.910156, 0.841161, 0.526184, 1 )
text = "Max roll number: "
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="next number label" type="Label" parent="debug info"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 18.0
margin/right = 114.0
margin/bottom = 32.0
custom_colors/font_color = Color( 0.910156, 0.841161, 0.526184, 1 )
text = "Next number:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="velocity label" type="Label" parent="debug info"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 36.0
margin/right = 114.0
margin/bottom = 50.0
custom_colors/font_color = Color( 0.910156, 0.841161, 0.526184, 1 )
text = "Velocity:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="acceleration label" type="Label" parent="debug info"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 54.0
margin/right = 114.0
margin/bottom = 68.0
custom_colors/font_color = Color( 0.910156, 0.841161, 0.526184, 1 )
text = "Acceleration:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="resistance label" type="Label" parent="debug info"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 72.0
margin/right = 114.0
margin/bottom = 86.0
custom_colors/font_color = Color( 0.910156, 0.841161, 0.526184, 1 )
text = "Resistance:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="shuffle state label" type="Label" parent="debug info"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 90.0
margin/right = 114.0
margin/bottom = 104.0
custom_colors/font_color = Color( 0.910156, 0.841161, 0.526184, 1 )
text = "Shuffle state:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="max shuffle number display" type="Label" parent="debug info"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 119.0
margin/top = 0.0
margin/right = 233.0
margin/bottom = 14.0
custom_colors/font_color = Color( 0.828125, 0.399278, 0.0549927, 1 )
text = "0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="next number display" type="Label" parent="debug info"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 119.0
margin/top = 18.0
margin/right = 233.0
margin/bottom = 32.0
custom_colors/font_color = Color( 0.828125, 0.399278, 0.0549927, 1 )
text = "0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="velocity display" type="Label" parent="debug info"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 119.0
margin/top = 36.0
margin/right = 233.0
margin/bottom = 50.0
custom_colors/font_color = Color( 0.828125, 0.399278, 0.0549927, 1 )
text = "0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="acceleration display" type="Label" parent="debug info"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 119.0
margin/top = 54.0
margin/right = 233.0
margin/bottom = 68.0
custom_colors/font_color = Color( 0.828125, 0.399278, 0.0549927, 1 )
text = "0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="resistance display" type="Label" parent="debug info"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 119.0
margin/top = 72.0
margin/right = 233.0
margin/bottom = 86.0
custom_colors/font_color = Color( 0.828125, 0.399278, 0.0549927, 1 )
text = "0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="shuffle state display" type="Label" parent="debug info"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 119.0
margin/top = 90.0
margin/right = 233.0
margin/bottom = 104.0
custom_colors/font_color = Color( 0.828125, 0.399278, 0.0549927, 1 )
text = "0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="acceleration meter" type="ProgressBar" parent="debug info"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 30.0
margin/top = 306.0
margin/right = 365.0
margin/bottom = 322.0
custom_styles/fg = SubResource( 7 )
range/min = 0.0
range/max = 100.0
range/step = 1.0
range/page = 0.0
range/value = 1.0
range/exp_edit = false
range/rounded = false
percent/visible = false

[node name="velocity meter" type="ProgressBar" parent="debug info"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 30.0
margin/top = 325.0
margin/right = 365.0
margin/bottom = 341.0
custom_styles/fg = SubResource( 8 )
range/min = 0.0
range/max = 100.0
range/step = 1.0
range/page = 0.0
range/value = 1.0
range/exp_edit = false
range/rounded = false
percent/visible = false

[node name="list setup frame" type="ColorFrame" parent="."]

editor/display_folded = true
visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 423.0
margin/top = 0.0
margin/right = 640.0
margin/bottom = 360.0
color = Color( 0, 0, 0, 1 )

[node name="go back" type="Button" parent="list setup frame"]

hint/tooltip = "Go back to the main page."
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 2.0
margin/top = 329.0
margin/right = 38.0
margin/bottom = 359.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
icon = ExtResource( 9 )
flat = false

[node name="add entry" type="Button" parent="list setup frame"]

hint/tooltip = "Add a new entry to the list."
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 143.0
margin/top = 329.0
margin/right = 179.0
margin/bottom = 359.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
icon = ExtResource( 10 )
flat = false

[node name="remove entry" type="Button" parent="list setup frame"]

hint/tooltip = "Removes selected entry"
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 180.0
margin/top = 329.0
margin/right = 216.0
margin/bottom = 359.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
icon = ExtResource( 11 )
flat = false

[node name="entry list" type="ItemList" parent="list setup frame"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 217.0
margin/bottom = 328.0

[node name="settings frame" type="ColorFrame" parent="."]

editor/display_folded = true
visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 426.0
margin/top = 0.0
margin/right = 640.0
margin/bottom = 360.0
color = Color( 0, 0, 0, 1 )

[node name="go back" type="Button" parent="settings frame"]

hint/tooltip = "Go back to the main page."
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -1.0
margin/top = 329.0
margin/right = 35.0
margin/bottom = 359.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
icon = ExtResource( 9 )
flat = false

[node name="option number label" type="Label" parent="settings frame"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 8.0
margin/top = 8.0
margin/right = 140.0
margin/bottom = 22.0
text = "Show number result"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="option name label" type="Label" parent="settings frame"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 9.0
margin/top = 32.0
margin/right = 141.0
margin/bottom = 46.0
text = "Show name result"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="option crop label" type="Label" parent="settings frame"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 9.0
margin/top = 57.0
margin/right = 141.0
margin/bottom = 71.0
text = "Crop instructions"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="checkbox number" type="CheckBox" parent="settings frame"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 186.0
margin/top = 3.0
margin/right = 212.0
margin/bottom = 26.0
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
flat = false
align = 0

[node name="checkbox name" type="CheckBox" parent="settings frame"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 187.0
margin/top = 29.0
margin/right = 213.0
margin/bottom = 52.0
toggle_mode = true
is_pressed = true
enabled_focus_mode = 2
shortcut = null
flat = false
align = 0

[node name="checkbox crop" type="CheckBox" parent="settings frame"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 187.0
margin/top = 54.0
margin/right = 213.0
margin/bottom = 77.0
toggle_mode = true
is_pressed = true
enabled_focus_mode = 2
shortcut = null
flat = false
align = 0

[node name="new entry frame" type="ColorFrame" parent="."]

editor/display_folded = true
visibility/visible = false
visibility/self_opacity = 0.8
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 508.0
margin/top = 0.0
margin/right = 640.0
margin/bottom = 360.0
color = Color( 0, 0, 0, 1 )

[node name="new entry label" type="Label" parent="new entry frame"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 33.0
margin/top = 114.0
margin/right = 102.0
margin/bottom = 128.0
text = "Add entry:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="new entry input" type="LineEdit" parent="new entry frame"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 4.0
margin/top = 131.0
margin/right = 132.0
margin/bottom = 155.0
placeholder/alpha = 0.6
focus_mode = 2
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="confirm button" type="Button" parent="new entry frame"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 84.0
margin/top = 166.0
margin/right = 129.0
margin/bottom = 189.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Yes"
flat = false

[node name="cancel button" type="Button" parent="new entry frame"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 8.0
margin/top = 166.0
margin/right = 53.0
margin/bottom = 189.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "No"
flat = false

[node name="overlay frame" type="ColorFrame" parent="."]

visibility/visible = false
visibility/self_opacity = 0.7
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 640.0
margin/bottom = 360.0
color = Color( 0, 0, 0, 1 )

[node name="setup list warning panel" type="Panel" parent="overlay frame"]

editor/display_folded = true
visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 122.0
margin/top = 211.0
margin/right = 267.0
margin/bottom = 283.0

[node name="setup list warning label" type="Label" parent="overlay frame/setup list warning panel"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 9.0
margin/top = 7.0
margin/right = 135.0
margin/bottom = 47.0
text = "The list requires at least two entries!"
align = 1
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="setup list warning confirm" type="Button" parent="overlay frame/setup list warning panel"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 50.0
margin/top = 46.0
margin/right = 98.0
margin/bottom = 66.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Okay!"
flat = false

[node name="about panel" type="Panel" parent="overlay frame"]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 32.0
margin/top = 25.0
margin/right = 609.0
margin/bottom = 332.0
__meta__ = {
"_edit_lock_": true
}

[node name="about header" type="Label" parent="overlay frame/about panel"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 4.0
margin/top = 5.0
margin/right = 574.0
margin/bottom = 193.0
text = "How to use:
1. Access the list setup by pressing the bottom-right most button.
2. Add items as desired to the list that you want shuffled.
3. Hold the shuffle button for more power, then let go and it will shuffle the results!

About: 
Version 0.1,  Created by AGamerAaron of \"VAR Team\".
MIT licensed. Feel free to contribute on Github!"
align = 1
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="about footer" type="Label" parent="overlay frame/about panel"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 6.0
margin/top = 172.0
margin/right = 570.0
margin/bottom = 203.0
text = "Created in the Godot Engine.
Thanks to Juan, Ariel & all contributors for creating such a wonderful game engine."
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="godot logo" type="Sprite" parent="overlay frame/about panel"]

transform/pos = Vector2( 286.644, 253.786 )
transform/scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 12 )

[node name="go back" type="Button" parent="overlay frame/about panel"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 535.0
margin/top = 271.0
margin/right = 571.0
margin/bottom = 301.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
icon = ExtResource( 9 )
flat = false

[connection signal="input_event" from="main frame/shuffle" to="." method="_on_shuffle_button_input_event"]

[connection signal="pressed" from="main frame/about" to="." method="_on_about_pressed"]

[connection signal="pressed" from="main frame/settings" to="." method="_on_settings_pressed"]

[connection signal="pressed" from="main frame/list" to="." method="_on_list_setup_pressed"]

[connection signal="pressed" from="list setup frame/go back" to="." method="_on_list_setup_go_back_pressed"]

[connection signal="pressed" from="list setup frame/add entry" to="." method="_on_add_entry_pressed"]

[connection signal="pressed" from="list setup frame/remove entry" to="." method="_on_remove_entry_pressed"]

[connection signal="pressed" from="settings frame/go back" to="." method="_on_settings_go_back_pressed"]

[connection signal="pressed" from="settings frame/checkbox number" to="." method="_on_checkbox_number_pressed"]

[connection signal="pressed" from="settings frame/checkbox name" to="." method="_on_checkbox_name_pressed"]

[connection signal="pressed" from="settings frame/checkbox crop" to="." method="_on_checkbox_crop_pressed"]

[connection signal="pressed" from="new entry frame/confirm button" to="." method="_on_confirm_button_pressed"]

[connection signal="pressed" from="new entry frame/cancel button" to="." method="_on_cancel_button_pressed"]

[connection signal="pressed" from="overlay frame/setup list warning panel/setup list warning confirm" to="." method="_on_setup_list_warning_confirm_pressed"]

[connection signal="pressed" from="overlay frame/about panel/go back" to="." method="_on_go_back_pressed"]


